# agent-threat-rules

./: .editorconfig  .gitignore  ATR-FRAMEWORK-SPEC.md  ATR-SPEC-v1.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION-GUIDE.md  CONTRIBUTORS.md  COVERAGE.md  DEPLOYMENTS.md  DESIGN.md  GOVERNANCE.md  INTEGRATION.md  LIMITATIONS.md  README.md  SECURITY.md  SKILL-THREAT-TRACKER.md  THREAT-MODEL.md  action.yml  contributors.yaml  hn-post-zh.md  hn-post.md  mcp-registry-v2.json  package-lock.json  package.json  vitest.config.ts
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.next/: trace  trace-build
action/: action.yml
data/: .tc-last-sync  .tc-pulled-files.txt  attack-embeddings.json  daily-summary.md  ecosystem-report.csv  ecosystem-stats.json  eval-report.json  evasion-payloads.json  full-scan-v2-2026-04-14.json  mega-scan-report.json  public-blacklist.json  public-whitelist.json  stats.json
docs/: BDFL-charter.md  HUMAN_REVIEW_QUEUE.md  OWASP-AST10-MAPPING.md  OWASP-MAPPING.md  QUALITY-STANDARD.md  REMEDIATION.md  REVIEWER-GUIDE.md  RUNTIMES.md  SAFE-MCP-MAPPING.md  contribution-paths.md  deployment-guide.md  ecosystem-pr-proposals.md  layer3-prompt-templates.md  mcp-ecosystem-audit-2026.md  quick-start.md  scan-report-2026-04.md  schema-spec.md
examples/: how-to-write-a-rule.md
python/: README.md  pyproject.toml
python/pyatr/: __init__.py  __main__.py  cli.py  engine.py  test_runner.py  types.py  validator.py
python/pyatr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/tests/: test_cli.py  test_engine.py  test_test_runner.py  test_validator.py
reports/: clawhub-ecosystem-report-dev-zh-tw.md  clawhub-ecosystem-report-en.md  clawhub-ecosystem-report-exec-zh-tw.md
scripts/: ast-analyzer.ts  audit-mcp-dynamic.ts  audit-npm-skills-v2.ts  audit-npm-skills.ts  auto-scan-pipeline.sh  autoresearch-v0.ts  backfill-metadata.ts  check-rules-safety.ts  compute-confidence.ts  crawl-mcp-registry.ts  crawl-skills-sh.ts  eval-garak.sh  export-findings.ts  export-public-report.ts  garak-to-tc.py  generate-review-queue.ts  generate-skillssec-posts.ts  install.sh  local-crystallize.ts  mega-scan.mjs  notify-author.ts  (+12 more)
(+853 files in other folders)
