[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyatr"
version = "0.1.0"
description = "Python reference engine for Agent Threat Rules (ATR) - Layer 1 regex detection"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pyatr = "pyatr.cli:main"

[tool.setuptools.packages.find]
include = ["pyatr*"]
